--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <article class="max-w-3xl mx-auto py-16 prose">
   <h1>{{ .Title }}</h1>
   {{ with .Params.thumbnail }}
-  <img src="{{ . }}" alt="{{ .Title }}" class="my-4 rounded-lg shadow-md">
+  <img src="{{ . }}" alt="{{ $.Title }}" class="my-4 rounded-lg shadow-md">
   {{ end }}
   {{ .Content }}
 </article>
