--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,8 @@
   <link rel="stylesheet" href="{{ $css.RelPermalink }}">
 </head>
 
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-white text-gray-900">
+  {{ partial "nav.html" . }}
   {{ block "main" . }}{{ end }}
 </body>
 
