--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-<article class="max-w-3xl mx-auto py-16 prose">
+<article class="max-w-[600px] mx-auto py-16 px-4 prose">
   <h1>{{ .Title }}</h1>
   {{ with .Params.thumbnail }}
-  <img src="{{ . }}" alt="{{ $.Title }}" class="my-4 rounded-lg shadow-md">
+  <img src="{{ . | absURL }}" alt="{{ $.Title }}" class="my-4 rounded-lg shadow-md">
   {{ end }}
   {{ .Content }}
 </article>
