--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,8 @@
     <div class="flex flex-col w-full">
       <a href="{{ .RelPermalink }}">
         {{ with .Params.thumbnail }}
-        <img src="{{ . | absURL }}" alt="{{ $.Title }}" class="w-full aspect-square object-cover block">
+        <img src="{{ if hasPrefix . " /" }}{{ $.Site.BaseURL }}{{ strings.TrimPrefix "/" . }}{{ else }}{{ . | absURL
+          }}{{ end }}" alt="{{ $.Title }}" class="w-full aspect-square object-cover block">
         {{ end }}
       </a>
       <div class="mt-2 w-full">
