--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,9 @@
 <nav class="w-full max-w-[600px] mx-auto pt-4 pb-8">
   <div class="w-full px-4 flex justify-center items-center">
     <a href="{{ " /" | relURL }}">
-      <img src="/images/valyafm-logo.png" alt="logo" class="h-12">
+      {{ $logoPath := "/images/valyafm-logo.png" }}
+      <img src="{{ if hasPrefix $logoPath " /" }}{{ $.Site.BaseURL }}{{ strings.TrimPrefix "/" $logoPath }}{{ else }}{{
+        $logoPath | absURL }}{{ end }}" alt="logo" class="h-12">
     </a>
   </div>
 </nav>
