--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,16 @@
-<nav class="w-full max-w-[600px] mx-auto pt-4 pb-8">
-  <div class="w-full px-4 flex justify-center items-center">
-    <a href="/valyafm/">
-      {{ $logoPath := "/images/valyafm-logo.png" }}
-      {{ $logoSrc := cond (hasPrefix $logoPath "/") (printf "%s%s" $.Site.BaseURL (strings.TrimPrefix "/" $logoPath))
-      ($logoPath | absURL) }}
-      <img src="{{ $logoSrc }}" alt="logo" class="h-12">
-    </a>
+<nav class="fixed top-0 left-0 right-0 z-50 bg-white">
+  <div class="w-full max-w-[600px] mx-auto pt-6 pb-4">
+    <div class="w-full px-4 flex flex-col items-center gap-2">
+      <a href="/valyafm/">
+        {{ $logoPath := "/images/valyafm-logo.png" }}
+        {{ $logoSrc := cond (hasPrefix $logoPath "/") (printf "%s%s" $.Site.BaseURL (strings.TrimPrefix "/" $logoPath))
+        ($logoPath | absURL) }}
+        <img src="{{ $logoSrc }}" alt="logo" class="h-12">
+      </a>
+      <div class="flex gap-4">
+        <button id="nav-updates" class="nav-btn active cursor-pointer" data-view="updates">updates</button>
+        <button id="nav-projects" class="nav-btn cursor-pointer" data-view="projects">projects</button>
+      </div>
+    </div>
   </div>
 </nav>
